# pathtracer-opencl

./: CMakeLists.txt  box.mtl
cl/: main.cl
src/: main.cpp  tiny_obj_loader.h
